<resources>
    <string name="app_name">Zula</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lbl_destino">Destino</string>
    <string name="lbl_tipo_viagem">Tipo de Viagem</string>
    <string name="lbl_data_viagem">Data da Viagem</string>
    <string name="lbl_salva_viagem">Salvar</string>
    <string name="ok">Ok</string>
    <string name="action_search">Buscar</string>
    <string name="action_share">Compartilhar</string>
    <string name="lbl_viagem">Viagem</string>
    <string name="lbl_tipo_Gasto">Tipo do Gasto</string>
    <string name="lbl_valor">Valor</string>
    <string name="lbl_data">Data D</string>
    <string name="lixeira">Excluir</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="editar">Editar</string>
</resources>
